test/error/ast/NotRealTypeForRealDiv.mod
MODULE NotRealTypeForRealDiv;
VAR a, b: INTEGER; r: REAL;
BEGIN
  r := a / b;
END NotRealTypeForRealDiv.
